--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,13 @@
     <script src="https://kit.fontawesome.com/d556c3d1df.js" crossorigin="anonymous"></script>
  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     
-    <title>React App</title>
+    <title>Facksbooks das Bücherhaus</title>
   </head>
   <body>
     <div id="root"></div>
